--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano 2025</title>
+    <title>Meus objetivos neste ano 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano 2025<span>_</span></h2>
+        <h2 class="titulo-principal">Meus Objetivos neste ano 2025<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Estudar para o ENEM</button>
@@ -22,18 +22,22 @@
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Estudar para o ENEM</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Estudar para o vestibular da UFPR</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Ter pelos menos 4 saidas com meus amigos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Ter pelos menos 4 roles com meus amigos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Passar de ano com boas notas</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
             </div>
         </div>
